# scientific-computing-2021

./: CMakeLists.txt  README.md  main.c
fdm-homework/: fdm-homework.md
